<resources>
    <string name="app_name">সূরা ও দোয়া</string>
    <string name="app_ID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="Rewarded_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">প্রয়োজনীয় সূরা ও দোয়ার ভান্ডার</string>
    <string name="nav_header_subtitle">বাংলা উচ্চারণ ও অর্থ সহ</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">ranaahmmed786@gmail.com</string>
    <string name="phone">+880 1947"-"781499</string>
    <string name="menu_home">কোরআনের সূরা সমূহ</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="exit">Exit</string>
    <string name="communicate">Communicate</string>
    <string name="share">অ্যাপস টি শেয়ার করুন</string>
    <string name="send">বন্ধুদের শেয়ার করুন</string>
    <string name="contact">আমাদের যোগাযোগের ঠিকানা</string>
    <string name="rate_app">অ্যাপসটিতে ৫ স্টার দিন</string>
    <string name="more_apps">আমাদের আরও অ্যাপস</string>
    <string name="privacy">আপনাদের নিরাপত্তা নীতি</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">E-MAIL</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="facebook">Facebook</string>
    <string name="contact_whatsapp"><u>Contact WhatsApp</u></string>
    <string name="whatsapp">WHATSAPP</string>
    <string name="contact_us_admin">CONTACT US ADMIN</string>
    <string name="rana_small_leter">Mohammad Rana Ahmmed</string>
    <string name="des_rana">
     ✔️WordPress Template Customization  ✔️Plugin Customization  ✔️Widget Customization  ✔️Creating Search  ✔️Fixing WordPress issues   ✔️WordPress Template Customization  ✔️Plugin Customization  ✔️Widget Customization  ✔️Creating Search  ✔️Fixing WordPress issues  ✔️Android App Developer</string>
    <string name="dest_rana_2">Hi, I am a Professional Web Designer and WordPress Theme Developer.</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="policy">
AppAmarBD built the সূরা ও দোয়া app as a Free app. This service is provided by AppAmarBD at no cost and is intended for use as is.
\n\nThis page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my service.
\n\nIf you choose to use my service, then you agree to the collection and use of information in relation to this policy. The personal information that I collect is used for providing and improving the service. I will not use or share your information with anyone except as described in this Privacy Policy.
\n\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at ou ft stat সূরা ও দোয়া unless otherwise defined in this Privacy Policy.
\n\n
        <b>Information Collection and Use</b>\n
\nFor A Better Experience, While Using Our Service, I May Require You To Provide Us With Certain Personally Identifiable Information, Including But Not Limited To The Internet, Access Network State, Access Wifi State, Receive Boot Completed, Wake Lock, Vibrate, C2dm. Permission. Receive, C2dm. Permission. Send. Write External Storage, Read Phone State, Read External Storage, Bind Job Service. The Information That I Request Will Be Retained On Your Device And Is Not Collected By Me In Any Way.
\n\nThe app does use third-party services that may collect information used to identify you.
\n\nLink to the privacy policy of third party service providers used by the app\n
\n
-Google Play Services\n
-AdMob\n
-Firebase Analytics\n
-Log Data
\n\nI want to inform you that whenever you use my service, in case of an error in the app I collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (IP) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
\n\n
        <b>Cookies</b>\n
\nCookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your devices internal memory
\n\nThis Service does not use these "cookies" explicitly. However, the app may use third-party code and libraries that use "cookies" to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this service.
\n\n
        <b>Service Providers</b>\n
\nI may employ third-party companies and individuals due to the following reasons:
\nTo facilitate our Service; To provide the Service on our behalf;
\n\nTo perform Service-related services, or To assist us in analyzing how our Service is used. I want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
\n\n
        <b>Security</b>\n
\nI value your trust in providing us your personal information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
\n\n
        <b>Links to Other Sites</b>\n
\nThis Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
\n\n
        <b>Childrens Privacy </b>\n
\nThese Services do not address anyone under the age of 12. I do not knowingly collect personally identifiable information from children under 12. In the case I discover that a child under 12 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do the necessary actions.
\n\n
        <b>Changes to This Privacy Policy</b> \n\nI may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
    </string>
    <string name="cont">Privacy Policy Let Us Know If You Have Any Comments or Complaints.\n<b>E-mail : ranaahmmed786@gmail.com</b></string>
    <string name="youtube">আমাদের ইউটিউব চ্যানেল</string>
    <string name="duas">হাদীসের দোয়া সমূহ</string>
    <string name="NamezLearn">সঠিক নামাজ শিক্ষা</string>
    <string name="islamic_status">ইসলামিক স্ট্যাটাস</string>
    <string-array name="button_name">

        <item>সূরা আল ফাতিহা</item>
        <item>সূরা শামস</item>
        <item>সূরা বালাদ</item>
        <item>সূরা লাইল</item>
        <item>সূরা আল ইখলাস</item>
        <item>সূরা ইনশিরাহ</item>
        <item>সূরা আলাক্ব</item>
        <item>সূরা যিলযাল</item>
        <item>সূরা বায়্যিনাহ</item>
        <item>সূরা ক্বদর</item>
        <item>সূরা আ-দিয়াত</item>
        <item>সূরা ক্বারিআহ</item>
        <item>সূরা তাকাছুর</item>
        <item>সূরা কুরাইশ</item>
        <item>সূরা হুমাযাহ</item>
        <item>সূরা আছর</item>
        <item>সূরা ফীল</item>
        <item>সূরা মাঊন</item>
        <item>সূরা কাওছার</item>
        <item>সূরা লাহাব</item>
        <item>সূরা নাছর</item>
        <item>সূরা কা-ফিরূন</item>
        <item>সূরা ইখলাছ</item>
        <item>সূরা ফালাক্ব</item>
        <item>সূরা নাস</item>
        <item>সূরা নছর</item>
        <item>সূরা আত তাকাসুর</item>
        <item>সূরা আল ক্বারিয়াহ</item>
        <item>সূরা আত-তিন</item>
        <item>সূরা আদ-দোহা</item>
        <item>সূরা আল-ফাজর</item>
        <item>সূরা আল-গাশিয়াহ</item>
        <item>সূরা আল-আলা</item>
        <item>সূরা আত তারিক্ব</item>
        <item>সূরা আল-বুরুজ</item>
        <item>সূরা আল-ইনশিকাক</item>
        <item>সূরা আল-মুতাফফিফিন</item>
        <item>সূরা আল ইন্ফিতার</item>


    </string-array>
</resources>