<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_home2"
            android:title="@string/duas"
            android:icon="@drawable/icon_home"/>

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/icon_contact"
            android:title="@string/contact" />

        <item
            android:id="@+id/nav_rateBar"
            android:icon="@drawable/icon_rate"
            android:title="@string/rate_app" />

        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/icon_more"
            android:title="@string/more_apps" />

        <item
            android:id="@+id/nav_youtube"
            android:icon="@drawable/icon_youtube"
            android:title="@string/youtube"/>

        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/icon_privacy"
            android:title="@string/privacy" />

    </group>


    <item android:title="@string/communicate">

        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/icon_share"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/icon_send"
                android:title="@string/send" />



        </menu>


    </item>

</menu>