<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="center"
    android:padding="5dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/app_icon" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:id="@+id/xyz"
        android:fontFamily="@font/lal_nolua"
        android:layout_toEndOf="@id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:layout_marginStart="20dp"
        android:layout_below="@id/xyz"
        android:layout_toEndOf="@id/imageView"
        android:id="@+id/textView"
        android:textColor="#FFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/meghna"
        android:text="@string/nav_header_subtitle" />

    <TextView
        android:layout_marginStart="10dp"
        android:layout_below="@id/textView"
        android:layout_toEndOf="@id/imageView"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/lal"
        android:text="@string/source_book_text" />



</RelativeLayout>